# pySigma-backend-kusto

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml  validate.yml
sigma/backends/kusto/: __init__.py  kusto.py
sigma/backends/microsoft365defender/: __init__.py  kusto.py  microsoft365defender.py
sigma/pipelines/azuremonitor/: __init__.py  azuremonitor.py  mappings.py  schema.py  tables.py  transformations.py
sigma/pipelines/kusto_common/: conditions.py  errors.py  finalization.py  mappings.py  postprocessing.py  schema.py  transformations.py
sigma/pipelines/microsoft365defender/: __init__.py  errors.py  finalization.py  mappings.py  microsoft365defender.py  schema.py  sentinelasim.py  tables.py  transformations.py
sigma/pipelines/microsoftxdr/: __init__.py  mappings.py  microsoftxdr.py  postprocessing.py  schema.py  tables.py  transformations.py
sigma/pipelines/sentinelasim/: __init__.py  mappings.py  schema.py  sentinelasim.py  tables.py  transformations.py
tests/: test_backend_kusto.py  test_backend_microsoft365defender.py  test_pipelines_azuremonitor.py  test_pipelines_microsoft365defender.py  test_pipelines_microsoftxdr.py  test_pipelines_sentinelasim.py
utils/: get_azure_monitor_schema_tables.py  get_microsoft_xdr_schema_tables.py  get_sentinel_asim_schema_tables.py
validation/: download_rules.py
validation/defaultschema/functions/: _ASIM_AADSTSErrorCodes.json  _ASIM_Enrich_IdentityInfo.json  _ASIM_GetDisabledParsers.json  _ASIM_GetSourceBySourceType.json  _ASIM_GetUserType.json  _ASIM_GetUsernameType.json  _ASIM_GetWatchlistRaw.json  _ASIM_GetWatchlistsRaw.json  _ASIM_GetWindowsUserType.json  _ASIM_IdentityInfo.json  _ASIM_LookupAADcodes.json  _ASIM_LookupDnsQueryType.json  _ASIM_LookupDnsResponseCode.json  _ASIM_LookupHTTPStatusCode.json  _ASIM_LookupICMPType.json  _ASIM_LookupNetworkProtocol.json  _ASIM_ResolveDnsQueryType.json  _ASIM_ResolveDnsResponseCode.json  _ASIM_ResolveDstFQDN.json  _ASIM_ResolveDvcFQDN.json  _ASIM_ResolveFQDN.json  _ASIM_ResolveICMPType.json  _ASIM_ResolveNetworkProtocol.json  _ASIM_ResolveSrcFQDN.json  _ASim_AuditEvent.json  _ASim_AuditEventBuiltIn.json  _ASim_AuditEvent_AzureActivityV01.json  _ASim_AuditEvent_AzureActivityV02.json  _ASim_AuditEvent_MicrosoftExchangeAdmin365V01.json  _ASim_AuditEvent_MicrosoftExchangeAdmin365V02.json  _ASim_AuditEvent_MicrosoftWindowsEventsV01.json  _ASim_Dns.json  _ASim_DnsBuiltIn.json  _ASim_Dns_AzureFirewallV03.json  _ASim_Dns_CiscoUmbrellaV03.json  _ASim_Dns_CorelightZeekV03.json  _ASim_Dns_CorelightZeekV04.json  _ASim_Dns_CorelightZeekV05.json  _ASim_Dns_GcpV03.json  _ASim_Dns_GcpV04.json  (+183 more)
validation/defaultschema/tables/: AACAudit.json  AACHttpRequest.json  AADB2CRequestLogs.json  AADDomainServicesAccountLogon.json  AADDomainServicesAccountManagement.json  AADDomainServicesDNSAuditsDynamicUpdates.json  AADDomainServicesDNSAuditsGeneral.json  AADDomainServicesDirectoryServiceAccess.json  AADDomainServicesLogonLogoff.json  AADDomainServicesPolicyChange.json  AADDomainServicesPrivilegeUse.json  AADDomainServicesSystemSecurity.json  AADManagedIdentitySignInLogs.json  AADNonInteractiveUserSignInLogs.json  AADProvisioningLogs.json  AADRiskyServicePrincipals.json  AADRiskyUsers.json  AADServicePrincipalRiskEvents.json  AADServicePrincipalSignInLogs.json  AADUserRiskEvents.json  ABSBotRequests.json  (+478 more)
