[tool.poetry]
name = "pySigma-backend-microsoft365defender"
version = "0.3.2"
description = "This package has been renamed to pySigma-backend-kusto. Install pySigma-backend-kusto instead."
authors = ["Stephen Lincoln <stephen.lincoln@attackiq.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/AttackIQ/pySigma-backend-kusto"
packages = [
    { include = "pysigma_backend_microsoft365defender" }  # Include the empty package
]

[tool.poetry.dependencies]
python = "^3.8"
pySigma-backend-kusto = ">=0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"