[tool.poetry]
name = "pySigma-backend-kusto"
version = "0.4.1"
description = "pySigma Kusto backend"
authors = ["Stephen Lincoln <stephen.lincoln@attackiq.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/AttackIQ/pySigma-backend-kusto"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = ">= 0.10.0"
certifi = ">=2023.07.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
ruff = "^0.6.9"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
