[tool.poetry]
name = "pySigma-backend-kusto"
version = "0.4.4"
description = "pySigma Kusto backend"
authors = ["Stephen Lincoln <stephen.lincoln@attackiq.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/AttackIQ/pySigma-backend-kusto"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = ">= 0.10.0"
certifi = ">=2023.07.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
ruff = "^0.6.9"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=sigma --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["sigma"]
omit = [
    # omit anything in a tests directory
    "tests/*",
    ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true
fail_under = 80

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120  # Same as Black
# Assume Python 3.11
target-version = "py311"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv"
]

[tool.ruff.lint]
# Enable isort rules
select = ["I"]

# Sort imports
[tool.ruff.lint.isort]
combine-as-imports = true
case-sensitive = false
